src/objects/FieloCMS__Page__c.object
<CustomObject>
    <description>The members’ portal&apos;s pages and templates</description>
    <fields>
        <fullName>FieloCMS__CSSClasses__c</fullName>
        <label>CSS Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Description__c</fullName>
        <description>An explanation about the menu</description>
        <inlineHelpText>An explanation about the menu</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Icon__c</fullName>
        <defaultValue>&apos;fielo-icon-content&apos;</defaultValue>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__SEODescription__c</fullName>
        <label>SEO Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__SEOKeywords__c</fullName>
        <label>SEO Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__SEOTitle__c</fullName>
        <label>SEO Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>FieloCMS__Site__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the template</description>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Record Type of the record must be &quot;Template&quot;</errorMessage>
            <filterItems>
                <field>FieloCMS__Page__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Template</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>FieloCMS__All_Menu</fullName>
        <columns>NAME</columns>
        <columns>FieloCMS__Site__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Menu</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloCMS__Pages</fullName>
        <columns>NAME</columns>
        <columns>FieloCMS__Description__c</columns>
        <columns>FieloCMS__Template__c</columns>
        <columns>FieloCMS__Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FieloCMS__Page__c.FieloCMS__Page</value>
        </filters>
        <label>Pages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloCMS__Templates</fullName>
        <columns>NAME</columns>
        <columns>FieloCMS__Description__c</columns>
        <columns>FieloCMS__Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FieloCMS__Page__c.FieloCMS__Template</value>
        </filters>
        <label>Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <recordTypes>
        <fullName>FieloCMS__Page</fullName>
        <active>true</active>
        <description>This record type is for menu records that are meant to be Pages</description>
        <label>Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCMS__AvoidAssigningTemplate</fullName>
        <active>true</active>
        <description>This validation rule avoids assigning a record with Record Type = Template a Template</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Template&apos;  &amp;&amp; NOT(ISNULL(FieloCMS__Template__c) || ISBLANK(FieloCMS__Template__c))</errorConditionFormula>
        <errorMessage>You cannot assign a template to a record that is already a template</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCMS__ModifySite</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Site</description>
        <errorConditionFormula>ISCHANGED(FieloCMS__Site__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloCMS__Site__c)))</errorConditionFormula>
        <errorDisplayField>FieloCMS__Site__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>